--- a/style.css
+++ b/style.css
@@ -155,6 +155,9 @@ header span {
     flex-direction: row;
     width: 100%;
     padding: 2vmin;
+    padding-top: 0;
+    border-top: 5px solid black;
+
 }
 
 .div-left {
@@ -167,6 +170,7 @@ header span {
 
 .div-right {
     width: 50%;
+    border-left: 5px solid black;
 }
 
 .div-left,
@@ -174,6 +178,7 @@ header span {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    border-collapse: collapse;
 }
 
 .div-left ol {
